--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
         <activity android:name=".RegisterActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".LoginActivity" />
+        <activity android:name=".TostartActivity" />
+        <activity android:name=".SafetyConcernsActivity" />
+        <activity android:name=".InstructionActivity" />
+        <activity android:name=".ClinicianPartActivity" />
 
 
         <activity
